--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
@@ -41,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.11",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
