Added get user method with pagination, create method according to type, added share static files and error handling.

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ DB_USERNAME=abz-user
 DB_PASSWORD=abz-password
 DB_NAME=abz-api
 JWT_SECRET_KEY=JULIES_JULY
-DOMAIN_NAME=
+TINY_SECRET=YwRhjQg7X79zzjjzq0GQltcdphQnbgpg
+DOMAIN_NAME=http://localhost:3000/
