--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3.8'
+
 services:
+  abz-api:
+    build: .
+    restart: unless-stopped
+    ports:
+      - "3001:3001"
+    environment:
+      # Добавьте сюда переменные окружения, необходимые для подключения к базе данных
+      DATABASE_URL: postgres://abz-user:abz-password@abz-server:5432/abz-api
+    depends_on:
+      - abz-server
+    networks:
+      - abz-network
+
   abz-server:
     restart: unless-stopped
     image: postgres:13
