changed port according to railway docs

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=abz-api
 JWT_SECRET_KEY=JULIES_JULY
 TINY_SECRET=YwRhjQg7X79zzjjzq0GQltcdphQnbgpg
 DOMAIN_NAME=http://localhost:3000/
+PORT=3000
